--- a/project2/src/app/pages/about/about.component.html
+++ b/project2/src/app/pages/about/about.component.html
@@ -1,2 +1,10 @@
-<p>about works!</p>
-<app-box2></app-box2>
+
+<!-- <app-box2></app-box2> -->
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>{{ name }}</h1>
+            <button (click)="demo1(100)" class="btn btn-primary">OK</button>
+        </div>
+    </div>
+</div>
