--- a/project2/src/app/pages/contact/contact.component.html
+++ b/project2/src/app/pages/contact/contact.component.html
@@ -1,1 +1,50 @@
-<p>contact works!</p>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            <h2>If in Angular View (Template)</h2>
+            <p *ngIf="a==true && b==100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam facere ut necessitatibus ducimus recusandae, pariatur, deleniti distinctio at voluptates quidem eius animi libero. Illo, cum minima. Vitae illo aliquid totam.</p>
+
+            <ng-template [ngIf]="c=='indore'">
+                <div class="bg-dark text-light">
+                    My Name Is James
+                </div>
+            </ng-template>
+        </div>
+
+        <h1>-----------------------------------------------------------</h1>
+        <div class="col-md-8 offset-md-2">
+            <h2>If Else in Angular </h2>
+
+            <h3 *ngIf="x==200; else box">
+                India
+            </h3>
+            <ng-template #box>
+                <h3>USA</h3>
+            </ng-template>
+
+
+            ******************************
+            <br>
+            <ng-template [ngIf]="y%5==0" [ngIfElse]="box2">
+                Rohit
+            </ng-template>
+            <ng-template #box2>
+                Gaurav
+            </ng-template>
+        </div>
+    </div>
+</div>
+<!-- 
+    && -- AND
+    || -- OR
+    if(a)
+    {
+
+    }
+
+
+
+    HTML   --- Logic
+    CSS  --- Logic
+
+ -->
