--- a/project2/src/app/shared/header/header.component.html
+++ b/project2/src/app/shared/header/header.component.html
@@ -23,6 +23,15 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/product">Product</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/student">Student</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/event1">Event1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/event2">Event2</a>
+          </li>
         
       </ul>
     </div>
