--- a/project2/src/app/pages/about/about.component.html
+++ b/project2/src/app/pages/about/about.component.html
@@ -4,7 +4,19 @@
     <div class="row">
         <div class="col-md-12">
             <h1>{{ name }}</h1>
-            <button (click)="demo1(100)" class="btn btn-primary">OK</button>
+            <!-- <button (click)="demo1(100)" class="btn btn-primary">OK</button> -->
+            <button (click)="show()" class="btn btn-primary">Show</button>
         </div>
     </div>
+    <div class="row">
+        
+        <ng-template [ngIf]="check" [ngIfElse]="box2">
+            <div id="box1"></div>
+        </ng-template>
+        <ng-template #box2>
+            <div id="box2"></div>
+        </ng-template>
+    </div>
+
+
 </div>
