--- a/project2/src/app/shared/header/header.component.html
+++ b/project2/src/app/shared/header/header.component.html
@@ -32,6 +32,15 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/event2">Event2</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/event3">Event3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/event4">Event4</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/event5">Event5</a>
+          </li>
         
       </ul>
     </div>
