--- a/project3/src/app/shared/header/header.component.html
+++ b/project3/src/app/shared/header/header.component.html
@@ -17,7 +17,7 @@
           <a class="nav-link" routerLink="/student">Student</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" routerLink="/employee">Employee</a>
         </li>
       </ul>
     </div>
