CRUD and parent to child

--- a/project3/src/app/pages/employee/employee.component.html
+++ b/project3/src/app/pages/employee/employee.component.html
@@ -95,3 +95,16 @@
     </div>
 </div>
 
+
+<!-- <br />
+<br />
+<br />
+<pre>{{ a | json }}</pre>
+<br />
+<select [(ngModel)]="a">
+    <option value="">Select</option>
+    <option value="red">Red</option>
+    <option value="green">Green</option>
+    <option value="blue">Blue</option>
+</select> -->
+
