parent to child

--- a/project3/src/app/pages/employee/employee.component.html
+++ b/project3/src/app/pages/employee/employee.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-md-10 offset-md-1">
-        <!-- <pre>{{ employes | json }}</pre> -->
+        <pre>{{ emp | json }}</pre>
+        <pre>{{ id | json }}</pre>
         <Br />
         <Br />
 
