--- a/project3/src/app/shared/header/header.component.html
+++ b/project3/src/app/shared/header/header.component.html
@@ -22,6 +22,11 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/about">About</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/contact">Contact</a>
+        </li>
+      
+      
       </ul>
     </div>
   </nav>
