--- a/project3/src/app/shared/header/header.component.html
+++ b/project3/src/app/shared/header/header.component.html
@@ -25,6 +25,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/contact">Contact</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/help">Help</a>
+        </li>
       
       
       </ul>
