--- a/project3/src/app/pages/home/home.component.html
+++ b/project3/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
 <p>home works!</p>
+<br />
+<button (click)="abc()">OK</button>
+
+<Br />
+<br />
+<button (click)="getData()">Get Data From API</button>
