--- a/project4/src/app/pages/user/user.component.html
+++ b/project4/src/app/pages/user/user.component.html
@@ -25,32 +25,60 @@
 <div id="addModal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
+            <form [formGroup]="userForm">
             <div class="modal-header">
                 <h3>Add New Users</h3>
             </div>
             <Div class="modal-body">
                 <div class="form-group">
                     <label>Full Name</label>
-                    <input type="text" class="form-control" />
+                    <input placeholder="Full Name" [ngClass]="{'is-invalid': isSubmit && userForm.controls.name.errors }" type="text" formControlName="name" class="form-control" />
+
+                    <div *ngIf="isSubmit && userForm.controls.name.errors" class="invalid-feedback">
+                        <div *ngIf="userForm.controls.name.errors.required">
+                            Insert Your Full Name
+                        </div>
+                    </div>
+
                 </div>
                 <div class="form-group">
                     <label>Age</label>
-                    <input type="text" class="form-control" />
+                    <input placeholder="Age" [ngClass]="{'is-invalid': isSubmit && userForm.controls.age.errors }" type="text" formControlName="age" class="form-control" />
+                    <div *ngIf="isSubmit && userForm.controls.age.errors" class="invalid-feedback">
+                        <div *ngIf="userForm.controls.age.errors.required">
+                            Insert Your Age
+                        </div>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label>City</label>
-                    <select class="form-control">
+                    <select [ngClass]="{'is-invalid': isSubmit && userForm.controls.city.errors }" formControlName="city" class="form-control">
                         <option value="">Select</option>
                         <option value="indore">Indore</option>
                         <option value="mumbai">Mumbai</option>
                         <option value="pune">Pune</option>
                     </select>
+                    <div *ngIf="isSubmit && userForm.controls.city.errors" class="invalid-feedback">
+                        <div *ngIf="userForm.controls.city.errors.required">
+                            Select Your City
+                        </div>
+                    </div>
                 </div>
             </Div>
             <div class="modal-footer">
-                <button class="btn btn-success" data-dismiss="modal">Add</button>
+                <button class="btn btn-success" type="submit" [attr.data-dismiss]="userForm.valid ? 'modal' : null" (click)="save()">Add</button>
                 <button class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
+            </form>
         </div>
     </div>
 </div>
+
+<!-- 
+    ngModel   ------ Camle Case
+    ngIf
+    ngSwtichCase
+    ngSwtichDefault
+
+
+ -->
