--- a/project4/src/app/pages/forms/forms.component.html
+++ b/project4/src/app/pages/forms/forms.component.html
@@ -22,6 +22,64 @@
                         Your Email ID is Incorrect
                     </div>
                 </div>
+
+            </div>
+
+            <div class="form-group">
+                <label>City</label>
+                <select [ngClass]="{'is-invalid' : isSubmit && myform.controls.city.errors }" type="text" formControlName="city" class="form-control">
+                    <option value="">Select</option>
+                    <option value="indore">Indore</option>
+                    <option value="mumbai">Mumbai</option>
+                    <option value="pune">Pune</option>
+                    <option value="bhopal">Bhopal</option>
+                </select>
+
+                <div class="invalid-feedback" *ngIf="isSubmit && myform.controls.city.errors">
+                    <div *ngIf="myform.controls.city.errors.required">
+                        Select Your City
+                    </div>
+                    <div *ngIf="myform.controls.city.errors.cityErr">
+                        Select Only Mumbai
+                    </div>
+
+                    
+                </div>
+                
+            </div>
+            <div class="form-group">
+                <label>Contact</label>
+                <input [ngClass]="{'is-invalid' : isSubmit && myform.controls.contact.errors }" formControlName="contact" type="text" class="form-control" >
+
+                <div *ngIf="isSubmit && myform.controls.contact.errors" class="invalid-feedback">
+                    <div *ngIf="myform.controls.contact.errors.required">Insert Your Contact Number</div>
+                    <div *ngIf="myform.controls.contact.errors.numErr">Insert Numbers Only</div>
+                    <div *ngIf="myform.controls.contact.errors.lenErr10">Insert 10 Digits</div>
+                </div>
+
+            </div>
+            <div class="form-group">
+                <label>Size Error</label>
+                <input [ngClass]="{'is-invalid' : isSubmit && myform.controls.abc.errors}" formControlName="abc" type="text" class="form-control" />
+                <div *ngIf="isSubmit && myform.controls.abc.errors" class="invalid-feedback">
+                    <div *ngIf="myform.controls.abc.errors.required">
+                        Insert Any String
+                    </div>
+                    <div *ngIf="myform.controls.abc.errors.lenErr">
+                        Insert max 5 char
+                    </div>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label>My Validation</label>
+                <input [ngClass]="{'is-invalid' : isSubmit && myform.controls.xyz.errors }" formControlName="xyz" type="text" class="form-control" >
+
+                <div *ngIf="isSubmit && myform.controls.xyz.errors" class="invalid-feedback">
+                    <div *ngIf="myform.controls.xyz.errors.required">Insert Your Number</div>
+                    <div *ngIf="myform.controls.xyz.errors.validErr">Numbers Start only 7, 8, 9</div>
+                </div>
+
             </div>
 
             <br />
