update and param url

--- a/project5/src/app/pages/edit-student/edit-student.component.html
+++ b/project5/src/app/pages/edit-student/edit-student.component.html
@@ -1,59 +1,10 @@
 <div class="row mt-4">
-    <div class="col-md-8">
-        
-        <button data-toggle="modal" (click)="empty()" data-target="#addModal" class="btn btn-primary">Add</button>
-    </div>
-    <Br />
-    <table class="table table-dark table-bordered">
-        <tr>
-            <th>S.No.</th>
-            <th>Name</th>
-            <th>Age</th>
-            <th>City</th>
-            <th>Address</th>
-            <th>Edit</th>
-            <th>Delete</th>
-        </tr>
-        <tr *ngFor="let s of allStudent; let n = index">
-            <td>{{ n+1 }}</td>
-            <td>{{ s.fullname }}</td>
-            <td>{{ s.age }}</td>
-            <td>{{ s.city }}</td>
-            <td>{{ s.address }}</td>
-            <td><a routerLink="/editstudent/{{ s.id }}" class="btn btn-sm btn-info">Edit</a></td>
-            <td><button (click)="askDelete(s)" data-toggle="modal" data-target="#delModal" class="btn btn-sm btn-danger">Delete</button></td>
-        </tr>
-    </table>
-</div>
-
-<div class="modal fade" id="delModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
+    <div class="col-md-6 offset-md-3">
+        <form [formGroup]="studentForm">
             <div class="modal-header">
-                <h4>Delete User</h4>
+                <h3>Update Student</h3>
             </div>
-            <div class="modal-body">
-                <p>Are you sure want to delete this user : <b *ngIf="stu">{{ stu.fullname }}</b></p>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-danger" (click)="delete()" data-dismiss="modal">Delete</button>
-                <button class="btn btn-info" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-
-</div>
-
-
-
-<div class="modal fade" id="addModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form [formGroup]="studentForm">
-            <div class="modal-header">
-                <h3>Add New Student</h3>
-            </div>
-            <div class="modal-body">
+            
                 <div class="form-group">
                     <label>Full Name</label>
                     <input [ngClass]="{'is-invalid' : isSubmit && studentForm.controls.fullname.errors }" formControlName="fullname" type="text" class="form-control" />
@@ -99,16 +50,13 @@
                     </div>
                 </div>
 
-            </div>
-            <div class="modal-footer">
-                <input type="submit" [attr.data-dismiss]="studentForm.valid ? 'modal' : null" (click)="save()" value="Add" class="btn btn-success" >
-                <input type="button" value="close" data-dismiss="modal" class="btn btn-danger" >
-            </div>
+                <br />
+                <Br />
+                <input type="submit" (click)="update()" value="Update" class="btn btn-primary" />
+                <a routerLink="/student" class="btn btn-danger">Cancel</a>
+            
+                
+            
         </form>
-
-        </div>
     </div>
-
 </div>
-
-
