--- a/project5/src/app/shared/header/header.component.html
+++ b/project5/src/app/shared/header/header.component.html
@@ -19,6 +19,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/employee">Employee</a>
+        </li>
       </ul>
     </div>
   </nav>
