pipe and directive

--- a/project5/src/app/pages/home/home.component.html
+++ b/project5/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
 <p>home works!</p>
+
+<br />
+<Br />
+<h1 appHello>Indore</h1>
+
+<p appHide>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia odio natus, temporibus, iste impedit porro qui et nesciunt sapiente facilis non? Pariatur rem ea deserunt dignissimos rerum deleniti, aliquam magnam.</p>
