--- a/project5/src/app/pages/student/student.component.html
+++ b/project5/src/app/pages/student/student.component.html
@@ -1,4 +1,6 @@
 <div class="row mt-4">
+
+    <div appHello>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas veritatis quam iste! Facilis natus laboriosam possimus corporis eveniet laborum suscipit perspiciatis voluptatum, ipsam vitae velit? Tempora minus soluta dignissimos incidunt!</div>
     <div class="col-md-8">
         
         <button data-toggle="modal" (click)="empty()" data-target="#addModal" class="btn btn-primary">Add</button>
@@ -24,6 +26,7 @@
             <td><button (click)="askDelete(s)" data-toggle="modal" data-target="#delModal" class="btn btn-sm btn-danger">Delete</button></td>
         </tr>
     </table>
+    <h2 appHide>hello indore</h2>
 </div>
 
 <div class="modal fade" id="delModal">
