--- a/project5/src/app/pages/employee/employee.component.html
+++ b/project5/src/app/pages/employee/employee.component.html
@@ -1,10 +1,12 @@
 <div class="row mt-4">
+    <h3 appHello>my name is james</h3>
     <div class="col-md-8 offset-md-2">
         <table class="table table-dark table-bordered">
             <tr>
                 <th>S.No.</th>
                 <th>Name</th>
                 <th>Age</th>
+                <th>Date</th>
                 <th>Salary</th>
                 <th>Bonus</th>
                 <th>Gender</th>
@@ -13,8 +15,9 @@
                 <td>{{ n+1 }}</td>
                 <td>{{ e.name }}</td>
                 <td>{{ e.age  }}</td>
+                <td>{{ e.date | date : 'M/d/yy, h:mm a' }}</td>
                 <td>{{ e.salary | currency : "&#8377;" }}</td>
-                <td>{{ e.salary | bonus : e.age  }}</td>
+                <td>{{ e.salary | bonus : e.age : e.gender | currency }}</td>
                 <td>{{ e.gender }}</td>
             </tr>
         </table>
