--- a/project6/src/app/admin/admin.component.html
+++ b/project6/src/app/admin/admin.component.html
@@ -1,3 +1,5 @@
-<h1 style="background-color: red;">Abmin Header</h1>
-<router-outlet></router-outlet>
-<h1 style="background-color: green;">Abmin Footer</h1>
+<app-header></app-header>
+<div style="min-height: 600px;">
+    <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
