--- a/project6/src/app/visiter/visiter.component.html
+++ b/project6/src/app/visiter/visiter.component.html
@@ -1,4 +1,9 @@
-<h1>Visiter Header</h1>
+<app-header></app-header>
+<app-middle-header></app-middle-header>
+
 <router-outlet></router-outlet>
-<h1>Visiter Footer</h1>
+
+<app-online-courses></app-online-courses>
+<app-events></app-events>
+<app-footer></app-footer>
 
