--- a/project6/src/app/admin/shared/header/header.component.html
+++ b/project6/src/app/admin/shared/header/header.component.html
@@ -9,19 +9,28 @@
   
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item" >
-          <a class="nav-link" routerLinkActive="active" routerLink="/admin/student">Student</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="/admin/teacher">Teacher</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="/admin">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="/admin/upload">Upload</a>
-        </li>
-      </ul>
+      <ng-template [ngIf]="_login.isUserLoggedIn()" [ngIfElse]="elsePart">
+        <ul class="navbar-nav">
+          <li class="nav-item" >
+            <a class="nav-link" routerLinkActive="active" routerLink="/admin/student">Student</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="/admin/teacher">Teacher</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="/admin">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="/admin/upload">Upload</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="_login.logout()" style="cursor:pointer;">Logout</a>
+          </li>
+        </ul>
+        </ng-template>
+        <ng-template #elsePart>
+          
+        </ng-template>
+      
     </div>
   </nav>
